--- a/webdev.html
+++ b/webdev.html
@@ -1,91 +1,100 @@
 <!DOCTYPE html>
-<html>
-    <html lang="en-US">
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <head>
-          <!--bootstrap--><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-            <link rel="stylesheet"  type="text/css" href="styles.css">
-        <!--fonts/icons--><link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Montserrat:ital,wght@1,100&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-        <script src="https://kit.fontawesome.com/69f28465c2.js" crossorigin="anonymous"></script>
+<html lang="en-US">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-            <title>Lauren's dev work</title>
-        </head>
-        <body class="gradient">
-            <div id="container">
-            <header>
-              <div class="scale-100">
-                <h1 class="">Lauren Libretti</h1>
-                <hr class="hr-expand">
-                <nav class="navbar navbar-expand-sm navbar-light sm-light">
-                  <a class="navbar-brand" href="#"></a>
-                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-                    aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse md:text-2xl" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav mx-auto mt-2 mt-lg-0 d-flex">
-                      <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="webdev.html">Web Dev</a>
-                      </li>
-                      <li class="nav-item active">
-                        <a class="nav-link" href="lx.html">Lighting <span class="sr-only">(current)</span></a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="Contact.html">Contact</a>
-                      </li>
-                    </ul>
-                  </div>
-                </nav>
-                <hr>
-              </div>
-              <!--container-->
-              </header>
-              <section>
-            <div class="grid-container shadow-lg p-3 mt-2 mx-5 bg-body rounded">
-                <h2>Developer</h2>
-                <i class="fas fa-laptop-code fa-10x"></i>
-            <p class="pdev">
-                Air plant XOXO la croix humblebrag hell Marfa tousled raclette, schlitz pork belly single-origin coffee street art church-key. Selvage coloring book ennui pork belly occupy tacos. Fashion axe iceland sartorial, pour-over viral taiyaki seitan wayfarers deep v. Shabby chic chambray marfa humblebrag hella brunch enamel pin cliche mumblecore butcher. 
-            </p>
-            <div class="devgrid">
-            <ul class="listdev">
-              <li class="lidev">HTML5  </li>
-              <li class="lidev">CSS </li>
-              <li class="lidev">Tailwind/Bootsrap </li>
-            </ul>
-            <ul class="listdev">
-              <li class="lidev">Future knowledge </li>
-              <li class="lidev">Thing I will master </li>
-              <li class="lidev">Look at how much I know </li>
+<head>
+  <!--bootstrap--><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  <!--fonts/icons--><link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Montserrat:ital,wght@1,100&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <script src="https://kit.fontawesome.com/69f28465c2.js" crossorigin="anonymous"></script>
+
+  <title>Lauren's dev work</title>
+</head>
+
+<body class="gradient">
+  <div id="container">
+    <header>
+      <div class="scale-100">
+        <h1 class="">Lauren Libretti</h1>
+        <hr class="hr-expand">
+        <nav class="navbar navbar-expand-sm navbar-light sm-light">
+          <a class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse md:text-2xl" id="navbarTogglerDemo02">
+            <ul class="navbar-nav mx-auto mt-2 mt-lg-0 d-flex">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="webdev.html">Web Dev</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="lx.html">Lighting <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Contact.html">Contact</a>
+              </li>
             </ul>
           </div>
-        </div><!--grid-container-->
-        </section>
-        <footer>
-            <div class="footer">
-              <a href="https://www.linkedin.com/in/lauren-libretti/"> <i class="fab fa-linkedin-in"></i></a>
-              <a href="https://github.com/lalibretti"> <i class="fab fa-github"></i></a>
-              <a href="https://www.laurenlibretti.com/" class="lights light-lighting"><i class="far fa-lightbulb"></i></a>
-              <a href="https://www.facebook.com/profile.php?id=5138727" class="fa"> <i class="fab fa-facebook-f"></i> </a>
-              <a href="https://www.instagram.com/lalibretti/" class="in insta-instagram"><i class="fab fa-instagram"></i></a>
-              <a href="mailto:lalibretti616@gmail.com"><i class="far fa-envelope"></i></a>
-              <p class="footer items-center">made with &hearts; by Lauren</p>
-            </div><!--footer-->
-          </footer>
+        </nav>
+        <hr>
+      </div><!--container-->
+    </header>
+    <section>
+      <div class="grid-container shadow-lg p-3 mt-2 mx-5 bg-body rounded">
+        <h2>Developer</h2>
+        <i class="fas fa-laptop-code fa-10x"></i>
+        <p class="pdev">
+          Air plant XOXO la croix humblebrag hell Marfa tousled raclette, schlitz pork belly single-origin coffee street
+          art church-key. Selvage coloring book ennui pork belly occupy tacos. Fashion axe iceland sartorial, pour-over
+          viral taiyaki seitan wayfarers deep v. Shabby chic chambray marfa humblebrag hella brunch enamel pin cliche
+          mumblecore butcher.
+        </p>
+        <div class="devgrid">
+          <ul class="listdev">
+            <li class="lidev">HTML5 </li>
+            <li class="lidev">CSS </li>
+            <li class="lidev">Tailwind/Bootsrap </li>
+          </ul>
+          <ul class="listdev">
+            <li class="lidev">Future knowledge </li>
+            <li class="lidev">Thing I will master </li>
+            <li class="lidev">Look at how much I know </li>
+          </ul>
         </div>
-          <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-          <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-          <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
- </body>
+      </div><!--grid-container-->
+    </section>
+    <footer>
+      <div class="footer">
+        <a href="https://www.linkedin.com/in/lauren-libretti/"> <i class="fab fa-linkedin-in"></i></a>
+        <a href="https://github.com/lalibretti"> <i class="fab fa-github"></i></a>
+        <a href="https://www.laurenlibretti.com/" class="lights light-lighting"><i class="far fa-lightbulb"></i></a>
+        <a href="https://www.facebook.com/profile.php?id=5138727" class="fa"> <i class="fab fa-facebook-f"></i> </a>
+        <a href="https://www.instagram.com/lalibretti/" class="in insta-instagram"><i class="fab fa-instagram"></i></a>
+        <a href="mailto:lalibretti616@gmail.com"><i class="far fa-envelope"></i></a>
+        <p class="footer items-center">made with &hearts; by Lauren</p>
+      </div><!--footer-->
+    </footer>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
